# ocurrent

./: .gitmodules  Dockerfile  current_github.opam  current_gitlab.opam
doc/examples/: gitlab.ml
examples/: build_matrix.ml  github.ml  github_app.ml
plugins/git/: current_git.ml  current_git.mli
plugins/github/: api.ml  api.mli  app.ml  app.mli  checks.ml  checks.mli  current_github.ml  current_github.mli  dune  installation.ml  repo_id.ml
plugins/gitlab/: README.md  api.ml  api.mli  current_gitlab.ml  current_gitlab.mli  dune  repo_id.ml
